fix: spacing between gallery subsections updated

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -813,6 +813,7 @@ header img {
   font-size: 1.4rem;
   font-weight: 600;
   color: #004c3f; 
+  margin-top: 75px; 
   margin-bottom: 10px;
 }
 
